<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <ImageView
        android:id="@+id/GOM_logo"
        android:layout_width="350dp"
        android:layout_height="188dp"
        android:contentDescription="@string/main_logo"
        android:src="@drawable/logo_med_res"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Spinner
        android:id="@+id/date_spinner"
        android:layout_width="236dp"
        android:layout_height="33dp"
        android:backgroundTint="@color/orange"

        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/main_accom_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:drawableLeft="@drawable/house_small"
        android:text="@string/small_accom_details_here"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_travel_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="4dp"
        android:drawableLeft="@drawable/plane_small"
        android:text="@string/small_travel_details_here"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/schedule_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_accom_button" />

    <Button
        android:id="@+id/schedule_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:drawableLeft="@drawable/bulb_small"
        android:text="@string/daily_schedule"

        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_accom_button" />




</androidx.constraintlayout.widget.ConstraintLayout>